--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <meta content="2539" name="filelandio">
     <meta name="fikper.com" content="mTBIRTyXsf">
+    <meta name="fikper.com" value="lWsEWEl8nu" />
     <meta content="71720" name="filesflycc">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
