--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <meta name="fikper.com" content="mTBIRTyXsf">
     <meta name="fikper.com" value="lWsEWEl8nu" />
     <meta content="71720" name="filesflycc">
+    <meta name="kshared.com" content="2ejlWXgPL4">
+    <meta name="fikper.com" value="x1Sq0ws0m5" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
