--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,10 @@
       content="numbers"
     />
     <meta content="2539" name="filelandio">
-    <meta name="fikper.com" content="mTBIRTyXsf">
-    <meta name="fikper.com" value="lWsEWEl8nu" />
     <meta content="71720" name="filesflycc">
     <meta name="kshared.com" content="2ejlWXgPL4">
-    <meta name="fikper.com" value="x1Sq0ws0m5" />
+    <meta name="fikper.com" content="dhFcCdjlHE">
+    <meta name="fikper.com" value="CJvZVOaXvi" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
