--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <meta name="kshared.com" content="2ejlWXgPL4">
     <meta name="fikper.com" content="dhFcCdjlHE">
     <meta name="fikper.com" value="CJvZVOaXvi" />
+    <meta name="fikper.com" value="k8CDgvyvVA" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
