--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,8 @@
     <meta content="2539" name="filelandio">
     <meta content="71720" name="filesflycc">
     <meta name="kshared.com" content="2ejlWXgPL4">
-    <meta name="fikper.com" content="dhFcCdjlHE">
-    <meta name="fikper.com" value="CJvZVOaXvi" />
     <meta name="fikper.com" value="k8CDgvyvVA" />
+    <meta name="fikper.com" value="nkMJ5N5DtS" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
